// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders GridRow correctly 1`] = `
<div
  className="ui basic buttons GridRow  "
/>
`;

exports[`renders GridRow correctly 2`] = `
<div
  className="ui basic buttons GridRow GridRow--is-active "
/>
`;

exports[`renders GridRow correctly 3`] = `
<div
  className="ui basic buttons GridRow GridRow--is-active "
/>
`;
